# ecryptfs-simple

./: BUILD_INSTRUCTIONS  CHANGELOG  CMakeLists.txt  README.md
rpm/: BUILD_INSTRUCTIONS  ecryptfs-simple.spec
scripts/: helper.sh
src/: ecryptfs-simple.c  ecryptfs_options.h  version.h
